# Routes/ComplaintRoute.js
@@ -7,6 +7,7 @@ router.post('/create',auth.AuthJWT, complaintController.createComplaint);
 router.get('/getall', auth.superAdminJWT,complaintController.getAllComplaints);
 router.get('/filter',auth.AuthJWT, complaintController.filterComplaints);
 router.get('/getOne/agencyId', auth.AuthJWT,complaintController.getComplaintsByAgency);
+router.get('/getCategories', auth.AuthJWT,complaintController.getComplaintCategories);
 router.get('/getOne/:userId', auth.AuthJWT,complaintController.getComplaintsByUser);
 router.put('/status/:id', auth.BothJWT, complaintController.changeComplaintStatus);
 router.get('/getOne/:id',auth.AuthJWT, complaintController.getComplaintById);
